--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="right">
           <img
-            src="/assets/hero.png"
+            src="assets/hero.png"
             alt=""
             class="flex justify-center items-center"
           />
@@ -107,7 +107,7 @@
               <div
                 class="h-full opacity-0 hover:opacity-100 transition duration-700 ease-in-out bg-[#f34859] text-white flex justify-center items-center flex-col rounded-l text-center gap-6"
               >
-                <img class="h-11" src="/assets/icon/icon.png" alt="" />
+                <img class="h-11" src="assets/icon/icon.png" alt="" />
                 <h5 class="font-cormorant text-xl font-medium">
                   WEB DEVELOPMENT
                 </h5>
@@ -121,7 +121,7 @@
                   >
                     <a href="https://www.fylehq.com/" target="_blank">READ MORE</a>
                     <img
-                      src="/assets/arrow/arrow.png"
+                      src="assets/arrow/arrow.png"
                       alt=""
                       class="w-8 ml-3"
                     />
@@ -133,7 +133,7 @@
               <div
                 class="h-full opacity-0 hover:opacity-100 transition duration-700 ease-in-out bg-[#f34859] rounded-l text-white flex justify-center items-center flex-col text-center gap-6"
               >
-                <img class="h-11" src="/assets/icon/icon.png" alt="" />
+                <img class="h-11" src="assets/icon/icon.png" alt="" />
                 <h5 class="font-cormorant text-xl font-medium">
                   WEB DEVELOPMENT
                 </h5>
@@ -147,7 +147,7 @@
                   >
                     <a href="https://www.fylehq.com/" target="_blank">READ MORE</a>
                     <img
-                      src="/assets/arrow/arrow.png"
+                      src="assets/arrow/arrow.png"
                       alt=""
                       class="w-8 ml-3"
                     />
@@ -159,7 +159,7 @@
               <div
                 class="h-full opacity-0 hover:opacity-100 transition duration-700 ease-in-out bg-[#f34859] rounded-l text-white flex justify-center items-center flex-col text-center gap-6"
               >
-                <img class="h-11" src="/assets/icon/icon.png" alt="" />
+                <img class="h-11" src="assets/icon/icon.png" alt="" />
                 <h5 class="font-cormorant text-xl font-medium">
                   WEB DEVELOPMENT
                 </h5>
@@ -173,7 +173,7 @@
                   >
                     <a href="https://www.fylehq.com/" target="_blank">READ MORE</a>
                     <img
-                      src="/assets/arrow/arrow.png"
+                      src="assets/arrow/arrow.png"
                       alt=""
                       class="w-8 ml-3"
                     />
@@ -185,7 +185,7 @@
               <div
                 class="h-full opacity-0 hover:opacity-100 transition duration-700 ease-in-out bg-[#f34859] rounded-l text-white flex justify-center items-center flex-col text-center gap-6"
               >
-                <img class="h-11" src="/assets/icon/icon.png" alt="" />
+                <img class="h-11" src="assets/icon/icon.png" alt="" />
                 <h5 class="font-cormorant text-xl font-medium">
                   WEB DEVELOPMENT
                 </h5>
@@ -199,7 +199,7 @@
                   >
                     <a href="https://www.fylehq.com/" target="_blank">READ MORE</a>
                     <img
-                      src="/assets/arrow/arrow.png"
+                      src="assets/arrow/arrow.png"
                       alt=""
                       class="w-8 ml-3"
                     />
@@ -211,7 +211,7 @@
               <div
                 class="h-full opacity-0 hover:opacity-100 transition duration-700 ease-in-out bg-[#f34859] rounded-l text-white flex justify-center items-center flex-col text-center gap-6"
               >
-                <img class="h-11" src="/assets/icon/icon.png" alt="" />
+                <img class="h-11" src="assets/icon/icon.png" alt="" />
                 <h5 class="font-cormorant text-xl font-medium">
                   WEB DEVELOPMENT
                 </h5>
@@ -225,7 +225,7 @@
                   >
                     <a href="https://www.fylehq.com/" target="_blank">READ MORE</a>
                     <img
-                      src="/assets/arrow/arrow.png"
+                      src="assets/arrow/arrow.png"
                       alt=""
                       class="w-8 ml-3"
                     />
@@ -258,22 +258,22 @@
         </h1>
         <div class="flex gap-10 max-[600px]:flex-col">
           <div class="flex flex-col justify-center items-start gap-3">
-            <img src="/assets/icon/1.png" alt="" class="h-12">
+            <img src="assets/icon/1.png" alt="" class="h-12">
             <h5 class="font-poppins text-[14px] font-semibold">Clarified Vision & Target</h5>
             <p class="font-poppins text-xs leading-4 font-medium">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
           </div>
           <div class="flex flex-col justify-center items-start gap-3">
-            <img src="/assets/icon/2.png" alt="" class="h-12">
+            <img src="assets/icon/2.png" alt="" class="h-12">
             <h5 class="font-poppins text-[14px] font-semibold">High Performance</h5>
             <p class="font-poppins text-xs leading-3 font-medium">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
           </div>
           <div class="flex flex-col justify-center items-start gap-3">
-            <img src="/assets/icon/3.png" alt="" class="h-12">
+            <img src="assets/icon/3.png" alt="" class="h-12">
             <h5 class="font-poppins text-[14px] font-semibold">Maintain Security</h5>
             <p class="font-poppins text-xs leading-3 font-medium">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
           </div>
           <div class="flex flex-col justify-center items-start gap-3">
-            <img src="/assets/icon/4.png" alt="" class="h-12">
+            <img src="assets/icon/4.png" alt="" class="h-12">
             <h5 class="font-poppins text-[14px] font-semibold">Better Strategy & Quality</h5>
             <p class="font-poppins text-xs leading-3 font-medium">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
           </div>
@@ -288,7 +288,7 @@
         </h1>
         <div class="W-[67%] flex gap-4 max-[850px]:flex-col">
           <div class="left w-[65%]">
-            <img src="/assets/image.png" id="holder" alt="" class="h-auto w-auto ">
+            <img src="assets/image.png" id="holder" alt="" class="h-auto w-auto ">
           </div>
           <div class="right w-[30%] max-[850px]:w-auto">
             <div class="p-5  bg-[#fafafa]  flex flex-col gap-5 hover:bg-[#ff3147] hover:text-white transition duration-700 ease-in-out" onclick="changeImage('1')">
@@ -317,22 +317,22 @@
         </h1>
         <div class="grid grid-cols-4 m-2 gap-4 max-[1000px]:grid-cols-2 max-[500px]:grid-cols-1">
           <div class="flex hover:shadow-2xl transition duration-150 ease-in-out gap-3 flex-col p-5 justify-center items-center bg-white ">
-            <img src="/assets/Page-4-icon/heart (2).png" class="h-7" alt="">
+            <img src="assets/Page-4-icon/heart (2).png" class="h-7" alt="">
             <h2 class=" font-poppins text-[45px]">199+</h2>
             <p class="font-poppins text-[16px]">Satisfied Customers</p>
           </div>
           <div class="flex hover:shadow-2xl transition duration-150 ease-in-out gap-3 flex-col justify-center items-center bg-white">
-            <img src="/assets/Page-4-icon/clock (3).png" class="h-7" alt="">
+            <img src="assets/Page-4-icon/clock (3).png" class="h-7" alt="">
             <h1 class=" font-poppins text-[45px]">1591+</h1>
             <p class="font-poppins text-[16px]">Days Of Operation</p>
           </div>
           <div class="flex flex-col justify-center items-center bg-white hover:shadow-2xl transition duration-150 ease-in-out gap-3">
-            <img src="/assets/Page-4-icon/Path 4402.png" class="h-7" alt="">
+            <img src="assets/Page-4-icon/Path 4402.png" class="h-7" alt="">
             <h1 class=" font-poppins text-[45px]">283 +</h1>
             <p class="font-poppins text-[16px]">Complete Projects</p>
           </div>
           <div class="flex flex-col justify-center items-center bg-white hover:shadow-2xl transition duration-150 ease-in-out gap-3">
-            <img src="/assets/Page-4-icon/Path 4406.png" class="h-7" alt="">
+            <img src="assets/Page-4-icon/Path 4406.png" class="h-7" alt="">
             <h1 class=" font-poppins text-[45px]">75+</h1>
             <p class="font-poppins text-[16px]">Win Awards</p>
           </div>
@@ -347,13 +347,13 @@
         PEOPLE SAY'S ABOUT US!
       </h1>
       <div class="flex flex-col items-start justify-center w-[45%]">
-        <img src="/assets/Quotemarks-left/Quotemarks-left.png" alt="" class="relative top-6 right-3 -z-10 h-9">
+        <img src="assets/Quotemarks-left/Quotemarks-left.png" alt="" class="relative top-6 right-3 -z-10 h-9">
       <p class="font-poppins text-[15px] font-medium leading-6">Jannat Tumpa The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections Bonorum et Malorum original.</p>
       <h1 class="text-[#ff3147] mt-2 mb-14 font-bold flex items-start">JANNAT TUMPA <span class="text-gray-500 font-normal">- COO, AMERIMAR ENTERPRISES, INC.</span></h1>
       </div>
     </div>
     <div class="page6 bg-[#f72d3e] w-full h-[30vh] flex justify-center items-center">
-      <img src="/assets/Group 500/Group 500.png" alt="" class="w-[60%]">
+      <img src="assets/Group 500/Group 500.png" alt="" class="w-[60%]">
     </div>
     
 
