--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div
     
-      class="flex items-center justify-center h-[95vh] max-[750px]:h-auto bg-slate-950 flex-col"
+      class="flex items-center justify-center h-[95vh] max-[750px]:h-auto flex-col"
     >
     <div class="w-[400px] shadow-2xl z-10 flex justify-center items-center bg-white fixed top-[-50%] left-[50%] translate-x-[-50%] translate-y-[-50%] p-6" id="contact">
       <form class="max-w-md mx-auto flex flex-col gap-4 " action="https://getform.io/f/alljljka" method="post">
